--- a/app/views/births/multipleBirths3/childsDetails/01-name-date.html
+++ b/app/views/births/multipleBirths3/childsDetails/01-name-date.html
@@ -108,7 +108,7 @@ href: "javascript:window.history.back()"
               <div class="govuk-form-group">
                 <label class="govuk-label govuk-date-input__label" for="dob-second">Seconds</label>
                 <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="dob-second"
-                  name="dob-second" type="text" inputmode="numeric" value="01">
+                  name="dob-second" type="text" inputmode="numeric" value="">
               </div>
             </div>
             <div class="govuk-date-input__item">
@@ -132,16 +132,20 @@ href: "javascript:window.history.back()"
           <label class="govuk-label govuk-label--s" for="deceased-first-name">First name</label>
           <input class="govuk-input govuk-!-width-one-half" id="childs-first-name" name="childFirstName" type="text"
             value="{{data['childFirstName']}}" </div>
+            <br><br>
 
           <div class="govuk-form-group">
             <label class="govuk-label govuk-label--s" for="childs-middle-name">Middle names</label>
             <input class="govuk-input govuk-!-width-one-half" id="childs-middle-name" name="childMiddleName" type="text"
               value="{{data['childMiddleName']}}" </div>
+              <br><br>
 
             <div class="govuk-form-group">
               <label class="govuk-label govuk-label--s" for="childs-last-name">Last name</label>
               <input class="govuk-input govuk-!-width-one-half" id="childs-last-name" name="childLastName" type="text"
                 value="{{data['childLastName']}}" </div>
+
+                <br><br><br>
 
               <div class="govuk-form-group">
                 <fieldset class="govuk-fieldset">
