--- a/app/views/births/multipleBirths3/parentsDetails/mothers-name.html
+++ b/app/views/births/multipleBirths3/parentsDetails/mothers-name.html
@@ -254,7 +254,7 @@ href: "javascript:window.history.back()"
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
               <h1 class="govuk-fieldset__heading">
-                Capitalise last name
+                Capitalise last name if different at marriage / civil partnership
               </h1>
             </legend>
             <div class="govuk-radios" data-module="govuk-radios">
