--- a/app/views/births/multipleBirths3/01-search-child3.html
+++ b/app/views/births/multipleBirths3/01-search-child3.html
@@ -39,7 +39,7 @@
 
       {{ govukButton({
         text: "Search",
-        href: "02-child-correct-child3"
+        href: "02-child3-correct"
       }) }}
 
     </div>
