--- a/app/views/births/multipleBirths3/02-child3-correct.html
+++ b/app/views/births/multipleBirths3/02-child3-correct.html
@@ -83,7 +83,7 @@ Check your answers template – {{ serviceName }} – GOV.UK Prototype Kit
 
     {{ govukButton({
     text: "Yes, continue",
-    href: ""
+    href: "02-child-correct-child3"
     }) }}
 
     <div class="govuk-form-group">
