removed some values from the mothers address fields

--- a/app/views/births/multipleBirths3/parentsDetails/mothers-details.html
+++ b/app/views/births/multipleBirths3/parentsDetails/mothers-details.html
@@ -513,7 +513,7 @@ href: "javascript:window.history.back()"
             </label>
             <input class="govuk-input govuk-!-width-two-thirds" id="current-address-street2"
               name="currentAddressStreet2" type="text" autocomplete="address-line1"
-              value="{{ data.currentAddressStreet2 }}">
+              value="">
           </div>
           <div class="govuk-form-group">
             <label class="govuk-label" for="current-address-street3">
@@ -521,7 +521,7 @@ href: "javascript:window.history.back()"
             </label>
             <input class="govuk-input govuk-!-width-two-thirds" id="current-address-street3"
               name="currentAddressStreet3" type="text" autocomplete="address-line2"
-              value="{{ data.currentAddressStreet3 }}">
+              value="">
           </div>
           <div class="govuk-form-group">
             <label class="govuk-label" for="current-address-street4">
@@ -529,7 +529,7 @@ href: "javascript:window.history.back()"
             </label>
             <input class="govuk-input govuk-!-width-two-thirds" id="current-address-street4"
               name="currentAddressStreet4" type="text" autocomplete="address-level2"
-              value="{{ data.currentAddressStreet4 }}">
+              value="">
           </div>
           <div class="govuk-form-group">
             <label class="govuk-label" for="current-address-town">
