--- a/app/views/births/multipleBirths3/childsDetails/01-name-date.html
+++ b/app/views/births/multipleBirths3/childsDetails/01-name-date.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main.html" %}
 
 {% block pageTitle %}
-Name and date of birth – {{ serviceName }} – GOV.UK Prototype Kit
+Name and date of birth - {{ serviceName }} - GOV.UK Prototype Kit
 {% endblock %}
 
 {% block beforeContent %}
@@ -172,13 +172,9 @@ href: "javascript:window.history.back()"
           </fieldset>
         </div>
 
-        <div>
-          <p class="govuk-body">
-            <a href="#" class="govuk-link">Add prefix or suffix</a>
-          </p>
-
-        </div><br><br>
-
+        <p class="govuk-body govuk-!-margin-bottom-3">
+          <a href="#" class="govuk-link">Add prefix or suffix</a>
+        </p>
 
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="name-order-hint">
