--- a/app/views/births/multipleBirths3/tasks/index.html
+++ b/app/views/births/multipleBirths3/tasks/index.html
@@ -148,7 +148,11 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
             Registrar's comments</a>
         </div>
         <div class="govuk-task-list__status">
+          {% if data.commentsCompleted %}
+          Completed
+          {% else %}
           <strong class="govuk-tag govuk-tag--yellow">Optional</strong>
+          {% endif %}
         </div>
       </li>
     </ul>
